--- a/Projects.html
+++ b/Projects.html
@@ -33,12 +33,12 @@
 <body class="back">
 <!-- Main Container -->
   <!-- Navigation -->
-  <header class="menu" id="menuBar"> <a href="../../Documents/vLinderIndex.html">
+  <header class="menu" id="menuBar"> <a href="index.html">
 	  </a>
 	  <a class="logoText" id="MainLogoText">vLinder</a>
     <nav>
       <ul>
-        <li><a href="vLinderIndex.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="About.html">ABOUT</a></li>
 		<li> <a href="Projects.html" class="Projects.html">PROJECTS</a></li>
         <li> <a href="Contact.html">PHOTOGRAPHY</a></li>
